--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-dom": "^18",
     "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
+    "react-stars": "^2.2.5",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -44,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-stars": "^2.2.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
